# ReadMarkable

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  deploy.sh  install.sh  uninstall.sh
cmake/: xochitl_readonly_lint.cmake  xochitl_readonly_lint.sh
fonts/: OFL.txt
installer/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
installer/config/: pinned-versions.toml
installer/on-device/: build-trigger.sh  detect-state.sh  install-appload.sh  install-home-tile.sh  install-persistence.sh  install-readmarkable.sh  install-trigger.sh  install-xovi.sh  rebuild-hashtab.sh  uninstall.sh  xovi-activate.service  xovi-activate.sh  xovi-trigger.service
installer/on-device/src/xovi-trigger/: Makefile  gesture.c  gesture.h  main.c
installer/payload/home-tile/: manifest.toml  readmarkable-3.26.0.68.qmd
installer/resources/: installer.qrc
installer/scripts/: entitlements.plist  fetch-bundled-payload.sh  installer.nsi  package-windows.ps1  refresh-pins.sh  run-installer-dev.bat  sign-macos.sh  win-configure.bat
installer/src/: main.cpp
installer/src/core/: pinned_versions.cpp  pinned_versions.h  version.h.in
installer/src/credentials/: auth_handler.cpp  auth_handler.h  device_store.cpp  device_store.h  keypair.cpp  keypair.h
installer/src/diagnostics/: diagnostics_zip.cpp  diagnostics_zip.h  logger.cpp  logger.h
installer/src/flow/: device_state.cpp  device_state.h  flow_runner.cpp  flow_runner.h  install_flow.cpp  install_flow.h  router.cpp  router.h
installer/src/payload/: bundled_payload.cpp  bundled_payload.h  cache.cpp  cache.h  github_fetcher.cpp  github_fetcher.h
installer/src/ssh/: known_hosts.cpp  known_hosts.h  ssh_client.cpp  ssh_client.h  ssh_session.cpp  ssh_session.h
installer/src/wizard/: installer_wizard.cpp  installer_wizard.h  page_action_summary.cpp  page_action_summary.h  page_connect.cpp  page_connect.h  page_done.cpp  page_done.h  page_installing.cpp  page_installing.h  page_prereqs.cpp  page_prereqs.h  page_welcome.cpp  page_welcome.h
installer/tests/: CMakeLists.txt
installer/tests/integration/: docker-compose.yml  run-smoke.sh
installer/tests/integration/mock-device/: Dockerfile  entrypoint.sh  overlay-setup.sh
installer/tests/unit/: test_bundled_payload.cpp  test_cache.cpp  test_device_state.cpp  test_device_store.cpp  test_gesture.cpp  test_install_flow_structure.cpp  test_keypair.cpp  test_known_hosts.cpp  test_logger.cpp  test_pinned_versions.cpp  test_router.cpp
packaging/appload/: external.manifest.json
packaging/draft/: readmarkable.draft
packaging/tarball/: stage-tarball.sh
scripts/: xochitl_smoke_test.sh
src/: main.cpp
src/annotation/: AnnotationModel.cpp  AnnotationModel.h  AnnotationRepository.cpp  AnnotationRepository.h  AnnotationService.cpp  AnnotationService.h  AnnotationTypes.h  MarginNoteRepository.cpp  MarginNoteRepository.h  MarginNoteService.cpp  MarginNoteService.h  SelectionController.cpp  SelectionController.h
src/diagnostic/: DebugController.cpp  DebugController.h  DiagRunner.cpp  DiagRunner.h
src/dictionary/: DictionaryDatabase.cpp  DictionaryDatabase.h  DictionaryService.cpp  DictionaryService.h  DictionaryTypes.h
src/display/: DisplayManager.cpp  DisplayManager.h  WaveformStrategy.cpp  WaveformStrategy.h
src/epub/: CrEngineRenderer.cpp  CrEngineRenderer.h  EpubDocument.cpp  EpubDocument.h  EpubParser.cpp  EpubParser.h  PositionRepository.cpp  PositionRepository.h
src/export/: ExportService.cpp  ExportService.h  StrokeRenderer.cpp  StrokeRenderer.h
src/input/: InputDiscovery.cpp  InputDiscovery.h  PenInputController.cpp  PenInputController.h  PenReader.cpp  PenReader.h  TouchHandler.cpp  TouchHandler.h
src/navigation/: BookmarkModel.cpp  BookmarkModel.h  BookmarkRepository.cpp  BookmarkRepository.h  NavigationController.cpp  NavigationController.h  ReadingTimeEstimator.cpp  ReadingTimeEstimator.h  TocModel.cpp  TocModel.h
src/platform/: LauncherRecovery.cpp  LauncherRecovery.h  LifecycleManager.cpp  LifecycleManager.h  XochitlGuard.cpp  XochitlGuard.h
src/qml/: AnnotationsPanel.qml  BookDetailScreen.qml  BookGridCard.qml  BookListCard.qml  BookmarkPanel.qml  DictionaryPopup.qml  FontPicker.qml  FootnotePopup.qml  GlobalSettingsScreen.qml  HighlightOverlay.qml  LibraryScreen.qml  LinkPreviewPopup.qml  Main.qml  MarginNoteCanvas.qml  MarginNoteIcon.qml  NoteEditor.qml  OnScreenKeyboard.qml  PenStrokeOverlay.qml  ReaderImageProvider.cpp  ReaderImageProvider.h  ReaderView.qml  ReturningSplash.qml  RmButton.qml  RmHeader.qml  RmListRow.qml  RmPanel.qml  SearchPanel.qml  SelectionHandles.qml  SelectionOverlay.qml  SelectionToolbar.qml  SettingsSheet.qml  Theme.qml  TocPanel.qml  Toolbar.qml
src/qml/diagnostic/: DiagLine.qml  DiagScreen.qml  FullDiagScreen.qml  InputDiagScreen.qml
src/rendering/: LayoutThread.cpp  LayoutThread.h  PageCache.cpp  PageCache.h  ReadingSettings.h
src/search/: SearchDatabase.cpp  SearchDatabase.h  SearchService.cpp  SearchService.h  SearchTypes.h
src/settings/: ReaderSettingsController.cpp  ReaderSettingsController.h
tests/: CMakeLists.txt  XochitlMetadataParserTest.cpp
tools/: build-dictionary-db.py
